--- a/blogpost.html
+++ b/blogpost.html
@@ -12,7 +12,7 @@
         <div id="cabecera">
             Hyperblog
             <span id="tagline">
-                Tu blog de confianza
+                Tu blog maestro
             </span>
         </div>
         <div id="post">
@@ -22,6 +22,7 @@
             <p>Los blogs son la mejor forma de compartir información y tus ideas. 
                 Mucho mas que ir a conferencias o salir en youtube. Exepto si
                 eres un rockstar. Peroestadísticamente no lo eres.... por ahora</p>
+            <p>Suscribete y dale like</p>
         </div>
     </div>
 </body>
